--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -14,6 +14,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression,RidgeCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import svm\n",
+    "from sklearn import neighbors\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import metrics\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.model_selection import cross_val_predict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -77,8 +93,6 @@
    ],
    "source": [
     "df['category'] =df.apply(condition, axis=1)\n",
-    "\n",
-    "print(df)\n",
     "df.to_csv('new_forestfire.csv',index=False)\n"
    ]
   },
@@ -131,7 +145,8 @@
     }
    ],
    "source": [
-    "print(df)"
+    "x= ndf[['FFMC','DMC','DC','ISI','temp','RH','wind','rain']]\n",
+    "y= ndf[['category']]"
    ]
   },
   {
