--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,100 +54,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     X  Y month  day  FFMC    DMC     DC   ISI  temp  RH  wind  rain   area  \\\n",
-      "0    7  5   mar  fri  86.2   26.2   94.3   5.1   8.2  51   6.7   0.0   0.00   \n",
-      "1    7  4   oct  tue  90.6   35.4  669.1   6.7  18.0  33   0.9   0.0   0.00   \n",
-      "2    7  4   oct  sat  90.6   43.7  686.9   6.7  14.6  33   1.3   0.0   0.00   \n",
-      "3    8  6   mar  fri  91.7   33.3   77.5   9.0   8.3  97   4.0   0.2   0.00   \n",
-      "4    8  6   mar  sun  89.3   51.3  102.2   9.6  11.4  99   1.8   0.0   0.00   \n",
-      "..  .. ..   ...  ...   ...    ...    ...   ...   ...  ..   ...   ...    ...   \n",
-      "512  4  3   aug  sun  81.6   56.7  665.6   1.9  27.8  32   2.7   0.0   6.44   \n",
-      "513  2  4   aug  sun  81.6   56.7  665.6   1.9  21.9  71   5.8   0.0  54.29   \n",
-      "514  7  4   aug  sun  81.6   56.7  665.6   1.9  21.2  70   6.7   0.0  11.16   \n",
-      "515  1  4   aug  sat  94.4  146.0  614.7  11.3  25.6  42   4.0   0.0   0.00   \n",
-      "516  6  3   nov  tue  79.5    3.0  106.7   1.1  11.8  31   4.5   0.0   0.00   \n",
-      "\n",
-      "     category  \n",
-      "0           0  \n",
-      "1           0  \n",
-      "2           0  \n",
-      "3           0  \n",
-      "4           0  \n",
-      "..        ...  \n",
-      "512         1  \n",
-      "513         2  \n",
-      "514         2  \n",
-      "515         0  \n",
-      "516         0  \n",
-      "\n",
-      "[517 rows x 14 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "df['category'] =df.apply(condition, axis=1)\n",
-    "df.to_csv('new_forestfire.csv',index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ndf=pd.read_csv('new_forestfire.csv')"
+    "#df['category'] =df.apply(condition, axis=1)\n",
+    "#df.to_csv('new_forestfire.csv',index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndf=pd.read_csv('new_forestfire.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def month_cat(month):\n",
+    "    if month == 'oct' or month == 'sep' :\n",
+    "        return 0\n",
+    "    elif month =='nov' or month == 'may':\n",
+    "        return 1\n",
+    "    elif month == 'mar' or month == 'jun':\n",
+    "        return 2\n",
+    "    elif month == 'jul' or month == 'jan':\n",
+    "        return 3\n",
+    "    elif month == 'feb' or month == 'dec':\n",
+    "        return 4\n",
+    "    else : \n",
+    "        return 5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndf['month_new'] = ndf['month'].apply(month_cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x= ndf[['temp','RH','wind','rain','month_new']]\n",
+    "y= ndf[['category']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def method(X, model,n):\n",
+    "    X_train, X_test, Y_train, Y_test= train_test_split(x,y,random_state =101)\n",
+    "    model.fit(X_train,Y_train)\n",
+    "    score= model.score(X_test,Y_test)\n",
+    "    y_pred =model.predict(X_test)\n",
+    "    #plt.figure(n)\n",
+    "    #plt.subplot(211)\n",
+    "    #plt.plot(np.arange(len(y_pred)),Y_test,'ro-',label='true value')\n",
+    "    #plt.plot(np.arange(len(y_pred)),y_pred,'bx-',label='predicted value')\n",
+    "    title=['Linear Regression','Decision Tree','SVM Regression','KNeighborsRegressor','Random Forest Tree']\n",
+    "    #plt.title(str(title[n-1]) + \" \" + \"Score: \" + score)\n",
+    "    #plt.legend()\n",
+    "    #plt.subplot(212)\n",
+    "    #predicted = cross_val_predict(model, x, y, cv=10)\n",
+    "    #plt.scatter(y, predicted)\n",
+    "    #plt.plot([y.min(), y.max()], [y.min(), y.max()], 'k--', lw=4)\n",
+    "    #plt.xlabel('True Value')\n",
+    "    #plt.ylabel('Predicted Value')\n",
+    "    print(str(title[n-1]))\n",
+    "    print(score)\n",
+    "    #print(str(title[n-1]) + \" \" + \"Score: \" + score)\n",
+    "    #plt.show()\n",
+    "    print (str(title[n-1])+' MSE: ',metrics.mean_squared_error(Y_test, y_pred))\n",
+    "    print (str(title[n-1])+' RMSE: ',np.sqrt(metrics.mean_squared_error(Y_test, y_pred)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_reg=LinearRegression()\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "svr=svm.SVR()\n",
+    "knn = neighbors.KNeighborsRegressor()\n",
+    "rf =ensemble.RandomForestRegressor(n_estimators=500)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     X  Y month  day  FFMC    DMC     DC   ISI  temp  RH  wind  rain   area  \\\n",
-      "0    7  5   mar  fri  86.2   26.2   94.3   5.1   8.2  51   6.7   0.0   0.00   \n",
-      "1    7  4   oct  tue  90.6   35.4  669.1   6.7  18.0  33   0.9   0.0   0.00   \n",
-      "2    7  4   oct  sat  90.6   43.7  686.9   6.7  14.6  33   1.3   0.0   0.00   \n",
-      "3    8  6   mar  fri  91.7   33.3   77.5   9.0   8.3  97   4.0   0.2   0.00   \n",
-      "4    8  6   mar  sun  89.3   51.3  102.2   9.6  11.4  99   1.8   0.0   0.00   \n",
-      "..  .. ..   ...  ...   ...    ...    ...   ...   ...  ..   ...   ...    ...   \n",
-      "512  4  3   aug  sun  81.6   56.7  665.6   1.9  27.8  32   2.7   0.0   6.44   \n",
-      "513  2  4   aug  sun  81.6   56.7  665.6   1.9  21.9  71   5.8   0.0  54.29   \n",
-      "514  7  4   aug  sun  81.6   56.7  665.6   1.9  21.2  70   6.7   0.0  11.16   \n",
-      "515  1  4   aug  sat  94.4  146.0  614.7  11.3  25.6  42   4.0   0.0   0.00   \n",
-      "516  6  3   nov  tue  79.5    3.0  106.7   1.1  11.8  31   4.5   0.0   0.00   \n",
-      "\n",
-      "     category  \n",
-      "0           0  \n",
-      "1           0  \n",
-      "2           0  \n",
-      "3           0  \n",
-      "4           0  \n",
-      "..        ...  \n",
-      "512         1  \n",
-      "513         2  \n",
-      "514         2  \n",
-      "515         0  \n",
-      "516         0  \n",
-      "\n",
-      "[517 rows x 14 columns]\n"
+      "Linear Regression\n",
+      "-0.009320365770656869\n",
+      "Linear Regression MSE:  0.6787530152061252\n",
+      "Linear Regression RMSE:  0.8238646825821127\n",
+      "Decision Tree\n",
+      "-0.7783888155643544\n",
+      "Decision Tree MSE:  1.195940170940171\n",
+      "Decision Tree RMSE:  1.0935904950849613\n",
+      "SVM Regression\n",
+      "-0.42756875869654287\n",
+      "SVM Regression MSE:  0.9600188723423794\n",
+      "SVM Regression RMSE:  0.9798055278178315\n",
+      "KNeighborsRegressor\n",
+      "-0.1996832380114384\n",
+      "KNeighborsRegressor MSE:  0.8067692307692307\n",
+      "KNeighborsRegressor RMSE:  0.898203334868687\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n",
+      "<ipython-input-40-d0ac5a75ed2a>:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  model.fit(X_train,Y_train)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Tree\n",
+      "-0.056963202693527615\n",
+      "Random Forest Tree MSE:  0.7107921182610617\n",
+      "Random Forest Tree RMSE:  0.8430848820024361\n"
      ]
     }
    ],
    "source": [
-    "x= ndf[['FFMC','DMC','DC','ISI','temp','RH','wind','rain']]\n",
-    "y= ndf[['category']]"
+    "list=[lin_reg, tree_reg,svr,knn,rf]\n",
+    "m=1\n",
+    "for i in list:\n",
+    "    method(x,i,m)\n",
+    "    m+=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
