--- a/Application.ipynb
+++ b/Application.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import smtplib                              #simple mail transfer protocol - it will help in sending e-mails\n",
     "from email.message import EmailMessage\n",
     "import getpass\n",
-    "#import stdiomask\n",
+    "import stdiomask\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
     "    print(\"Enter the detail:\")\n",
     "    lst =[0,0,0,0,0]\n",
     "    lst[0]=float(input(\"Temperature : \"))\n",
-    "    lst[1]=int(input(\"RH: \"))\n",
+    "    lst[1]=float(input(\"RH: \"))\n",
     "    lst[2]=float(input(\"wind: \"))\n",
     "    lst[3]=float(input(\"rain: \"))\n",
     "    m=input(\"Month_name: \")\n",
@@ -191,7 +191,7 @@
     "    lst=[lst]\n",
     "    nlst=np.array(lst)\n",
     "\n",
-    "    predictions = model.predict(nlst)\n",
+    "    predictions = classifier.predict(nlst)\n",
     "    stage = area_cat(predictions)\n",
     "    print(\"The probability of Forest fire is \"+stage)\n",
     "    print(\"Do you want to send the report by email?\\n if yes type 'y' otherwise type 'n': \")\n",
@@ -202,6 +202,13 @@
     "        sender_Email_pass =stdiomask.getpass(prompt=\"Password: \")\n",
     "        get_email_info()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -224,10 +231,18 @@
       "Type- 'exit' -to exit\n",
       "Your choice: machine\n",
       "Enter the detail:\n",
-      "Temperature : 23\n",
-      "RH: 22\n",
-      "wind: 22.9\n",
-      "rain: 3.1\n"
+      "Temperature : 22.4\n",
+      "RH: 23\n",
+      "wind: 12\n",
+      "rain: 0\n",
+      "Month_name: oct\n",
+      "The probability of Forest fire is NO Damage\n",
+      "Do you want to send the report by email?\n",
+      " if yes type 'y' otherwise type 'n': \n",
+      "y\n",
+      "Waring: make sure you have given access to less secure app in yoyr google account\n",
+      "Enter the ur email:   anivesh.try786@gmail.com\n",
+      "Password: "
      ]
     }
    ],
@@ -254,6 +269,13 @@
     "print(\"  \"*10+\"*-\"*30)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
