--- a/Application.ipynb
+++ b/Application.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "host ='imap.gmail.com'\n",
-    "sender_Email=\"\"\n",
+    "sender_Email=\"e\"\n",
     "sender_Email_pass=\"\"\n",
     "stage= 0"
    ]
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,10 @@
       "anivesh.try786@gmail.com luciferTRY@!@#321\n",
       "Your Email is sent\n",
       "Type - 'machine'- for using model\n",
-      "Type- 'exit' -to exit\n"
+      "Type- 'exit' -to exit\n",
+      "Your choice: exit\n",
+      "Thanking for using me\n",
+      "                    *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n"
      ]
     }
    ],
